[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameFrontHUDRelated/Subs/CoinsPanel/CoinsPanel.gd" type="Script" id=1]
[ext_resource path="res://GameFrontHUDRelated/Subs/CoinsPanel/Assets/CoinsPanel_CoinIcon.png" type="Texture" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/CoinsPanel/Assets/CoinsPanel_Background.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/FontRelated/FontRes/monogram_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://MiscRelated/ShadersRelated/Shader_Flamebow.tres" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/DonutMaskCenter = Vector2( 0.5, 1.15 )
shader_param/DonutMaskSize = 0.7
shader_param/DonutMaskThickness = 0.6
shader_param/OutlineWidth = 3.0
shader_param/OutlinePixelSize = 1.0
shader_param/UseRainbowColorOutline = true
shader_param/RainbowColorLightOffset = 0.5
shader_param/RainbowColorSinFrequency = 0.1
shader_param/OutlineUseNoise = false
shader_param/NoiseBlockSize = 2.0
shader_param/NoiseMaxLineWidth = 10.0
shader_param/NoiseMinLineWidth = 5.0
shader_param/NoiseFreq = 2.0
shader_param/BackgroundColor = Color( 0.0313726, 0.0313726, 0.0313726, 1 )

[node name="CoinsPanel" type="MarginContainer"]
margin_right = 52.0
margin_bottom = 25.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 80.0
margin_bottom = 25.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 80.0
margin_bottom = 25.0
mouse_filter = 2

[node name="RainbowColorRect" type="ColorRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.392157 )
material = SubResource( 1 )
margin_right = 80.0
margin_bottom = 24.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="CoinLabel" type="Label" parent="Control"]
margin_left = 3.0
margin_top = 6.0
margin_right = 56.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = ExtResource( 4 )
text = "20 / 20"
align = 1
valign = 1

[node name="FoundLabel" type="Label" parent="Control"]
margin_left = 2.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 20.0
text = "Found"
align = 1

[node name="StarTextureRect" type="TextureRect" parent="Control"]
margin_left = 59.0
margin_top = 3.5
margin_right = 76.0
margin_bottom = 20.5
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
texture = ExtResource( 2 )
